CSHARP/QSharpParser.ts
// Generated from ./CSHARP/QSharpParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { QSharpParserListener } from "./QSharpParserListener";
import { QSharpParserVisitor } from "./QSharpParserVisitor";


export class QSharpParser extends Parser {
	public static readonly Adj = 1;
	public static readonly AdjointFunctor = 2;
	public static readonly AdjointGenerator = 3;
	public static readonly And = 4;
	public static readonly Apply = 5;
	public static readonly As = 6;
	public static readonly Auto = 7;
	public static readonly BigInt = 8;
	public static readonly Body = 9;
	public static readonly Bool = 10;
	public static readonly Borrow = 11;
	public static readonly Borrowing = 12;
	public static readonly ControlledFunctor = 13;
	public static readonly ControlledGenerator = 14;
	public static readonly Ctl = 15;
	public static readonly Distribute = 16;
	public static readonly Double = 17;
	public static readonly Elif = 18;
	public static readonly Else = 19;
	public static readonly Fail = 20;
	public static readonly False = 21;
	public static readonly Fixup = 22;
	public static readonly For = 23;
	public static readonly Function = 24;
	public static readonly If = 25;
	public static readonly In = 26;
	public static readonly Int = 27;
	public static readonly Internal = 28;
	public static readonly Intrinsic = 29;
	public static readonly Invert = 30;
	public static readonly Is = 31;
	public static readonly Let = 32;
	public static readonly Mutable = 33;
	public static readonly Namespace = 34;
	public static readonly New = 35;
	public static readonly Newtype = 36;
	public static readonly Not = 37;
	public static readonly One = 38;
	public static readonly Open = 39;
	public static readonly Operation = 40;
	public static readonly Or = 41;
	public static readonly Pauli = 42;
	public static readonly PauliI = 43;
	public static readonly PauliX = 44;
	public static readonly PauliY = 45;
	public static readonly PauliZ = 46;
	public static readonly Qubit = 47;
	public static readonly Range = 48;
	public static readonly Repeat = 49;
	public static readonly Result = 50;
	public static readonly Return = 51;
	public static readonly Self = 52;
	public static readonly Set = 53;
	public static readonly String = 54;
	public static readonly True = 55;
	public static readonly Unit = 56;
	public static readonly Until = 57;
	public static readonly Use = 58;
	public static readonly Using = 59;
	public static readonly While = 60;
	public static readonly Within = 61;
	public static readonly Zero = 62;
	public static readonly AndEqual = 63;
	public static readonly ArrowLeft = 64;
	public static readonly ArrowRight = 65;
	public static readonly Asterisk = 66;
	public static readonly AsteriskEqual = 67;
	public static readonly At = 68;
	public static readonly Bang = 69;
	public static readonly BraceLeft = 70;
	public static readonly BraceRight = 71;
	public static readonly BracketLeft = 72;
	public static readonly BracketRight = 73;
	public static readonly Caret = 74;
	public static readonly CaretEqual = 75;
	public static readonly Colon = 76;
	public static readonly Comma = 77;
	public static readonly DollarQuote = 78;
	public static readonly Dot = 79;
	public static readonly DoubleAmpersand = 80;
	public static readonly DoubleColon = 81;
	public static readonly DoubleDot = 82;
	public static readonly DoubleEqual = 83;
	public static readonly DoublePipe = 84;
	public static readonly DoubleQuote = 85;
	public static readonly Ellipsis = 86;
	public static readonly Equal = 87;
	public static readonly FatArrowRight = 88;
	public static readonly Greater = 89;
	public static readonly GreaterEqual = 90;
	public static readonly Less = 91;
	public static readonly LessEqual = 92;
	public static readonly Minus = 93;
	public static readonly MinusEqual = 94;
	public static readonly NotEqual = 95;
	public static readonly OrEqual = 96;
	public static readonly ParenLeft = 97;
	public static readonly ParenRight = 98;
	public static readonly Percent = 99;
	public static readonly PercentEqual = 100;
	public static readonly Pipe = 101;
	public static readonly Plus = 102;
	public static readonly PlusEqual = 103;
	public static readonly Question = 104;
	public static readonly Semicolon = 105;
	public static readonly Slash = 106;
	public static readonly SlashEqual = 107;
	public static readonly TripleAmpersand = 108;
	public static readonly TripleAmpersandEqual = 109;
	public static readonly TripleCaret = 110;
	public static readonly TripleCaretEqual = 111;
	public static readonly TripleGreater = 112;
	public static readonly TripleGreaterEqual = 113;
	public static readonly TripleLess = 114;
	public static readonly TripleLessEqual = 115;
	public static readonly TriplePipe = 116;
	public static readonly TriplePipeEqual = 117;
	public static readonly TripleTilde = 118;
	public static readonly Underscore = 119;
	public static readonly With = 120;
	public static readonly WithEqual = 121;
	public static readonly IntegerLiteral = 122;
	public static readonly BigIntegerLiteral = 123;
	public static readonly DoubleLiteral = 124;
	public static readonly Identifier = 125;
	public static readonly IdentifierStart = 126;
	public static readonly IdentifierContinuation = 127;
	public static readonly TypeParameter = 128;
	public static readonly Whitespace = 129;
	public static readonly Comment = 130;
	public static readonly Invalid = 131;
	public static readonly StringEscape = 132;
	public static readonly StringText = 133;
	public static readonly StringDoubleQuote = 134;
	public static readonly InterpStringEscape = 135;
	public static readonly InterpBraceLeft = 136;
	public static readonly InterpStringText = 137;
	public static readonly InterpDoubleQuote = 138;
	public static readonly RULE_document = 0;
	public static readonly RULE_namespace = 1;
	public static readonly RULE_qualifiedName = 2;
	public static readonly RULE_namespaceElement = 3;
	public static readonly RULE_openDirective = 4;
	public static readonly RULE_attribute = 5;
	public static readonly RULE_access = 6;
	public static readonly RULE_declarationPrefix = 7;
	public static readonly RULE_typeDeclaration = 8;
	public static readonly RULE_underlyingType = 9;
	public static readonly RULE_typeDeclarationTuple = 10;
	public static readonly RULE_typeTupleItem = 11;
	public static readonly RULE_namedItem = 12;
	public static readonly RULE_callableDeclaration = 13;
	public static readonly RULE_typeParameterBinding = 14;
	public static readonly RULE_parameterTuple = 15;
	public static readonly RULE_parameter = 16;
	public static readonly RULE_characteristics = 17;
	public static readonly RULE_characteristicsExpression = 18;
	public static readonly RULE_callableBody = 19;
	public static readonly RULE_specialization = 20;
	public static readonly RULE_specializationName = 21;
	public static readonly RULE_specializationGenerator = 22;
	public static readonly RULE_providedSpecialization = 23;
	public static readonly RULE_specializationParameterTuple = 24;
	public static readonly RULE_specializationParameter = 25;
	public static readonly RULE_type = 26;
	public static readonly RULE_statement = 27;
	public static readonly RULE_scope = 28;
	public static readonly RULE_symbolBinding = 29;
	public static readonly RULE_updateOperator = 30;
	public static readonly RULE_forBinding = 31;
	public static readonly RULE_qubitBinding = 32;
	public static readonly RULE_qubitInitializer = 33;
	public static readonly RULE_expression = 34;
	public static readonly RULE_size = 35;
	public static readonly RULE_typeTuple = 36;
	public static readonly RULE_boolLiteral = 37;
	public static readonly RULE_resultLiteral = 38;
	public static readonly RULE_pauliLiteral = 39;
	public static readonly RULE_stringContent = 40;
	public static readonly RULE_interpStringContent = 41;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"document", "namespace", "qualifiedName", "namespaceElement", "openDirective", 
		"attribute", "access", "declarationPrefix", "typeDeclaration", "underlyingType", 
		"typeDeclarationTuple", "typeTupleItem", "namedItem", "callableDeclaration", 
		"typeParameterBinding", "parameterTuple", "parameter", "characteristics", 
		"characteristicsExpression", "callableBody", "specialization", "specializationName", 
		"specializationGenerator", "providedSpecialization", "specializationParameterTuple", 
		"specializationParameter", "type", "statement", "scope", "symbolBinding", 
		"updateOperator", "forBinding", "qubitBinding", "qubitInitializer", "expression", 
		"size", "typeTuple", "boolLiteral", "resultLiteral", "pauliLiteral", "stringContent", 
		"interpStringContent",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'Adj'", "'Adjoint'", "'adjoint'", "'and'", "'apply'", "'as'", 
		"'auto'", "'BigInt'", "'body'", "'Bool'", "'borrow'", "'borrowing'", "'Controlled'", 
		"'controlled'", "'Ctl'", "'distribute'", "'Double'", "'elif'", "'else'", 
		"'fail'", "'false'", "'fixup'", "'for'", "'function'", "'if'", "'in'", 
		"'Int'", "'internal'", "'intrinsic'", "'invert'", "'is'", "'let'", "'mutable'", 
		"'namespace'", "'new'", "'newtype'", "'not'", "'One'", "'open'", "'operation'", 
		"'or'", "'Pauli'", "'PauliI'", "'PauliX'", "'PauliY'", "'PauliZ'", "'Qubit'", 
		"'Range'", "'repeat'", "'Result'", "'return'", "'self'", "'set'", "'String'", 
		"'true'", "'Unit'", "'until'", "'use'", "'using'", "'while'", "'within'", 
		"'Zero'", "'and='", "'<-'", "'->'", "'*'", "'*='", "'@'", "'!'", undefined, 
		"'}'", "'['", "']'", "'^'", "'^='", "':'", "','", "'$\"'", "'.'", "'&&'", 
		"'::'", "'..'", "'=='", "'||'", undefined, "'...'", "'='", "'=>'", "'>'", 
		"'>='", "'<'", "'<='", "'-'", "'-='", "'!='", "'or='", "'('", "')'", "'%'", 
		"'%='", "'|'", "'+'", "'+='", "'?'", "';'", "'/'", "'/='", "'&&&'", "'&&&='", 
		"'^^^'", "'^^^='", "'>>>'", "'>>>='", "'<<<'", "'<<<='", "'|||'", "'|||='", 
		"'~~~'", "'_'", "'w/'", "'w/='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "Adj", "AdjointFunctor", "AdjointGenerator", "And", "Apply", 
		"As", "Auto", "BigInt", "Body", "Bool", "Borrow", "Borrowing", "ControlledFunctor", 
		"ControlledGenerator", "Ctl", "Distribute", "Double", "Elif", "Else", 
		"Fail", "False", "Fixup", "For", "Function", "If", "In", "Int", "Internal", 
		"Intrinsic", "Invert", "Is", "Let", "Mutable", "Namespace", "New", "Newtype", 
		"Not", "One", "Open", "Operation", "Or", "Pauli", "PauliI", "PauliX", 
		"PauliY", "PauliZ", "Qubit", "Range", "Repeat", "Result", "Return", "Self", 
		"Set", "String", "True", "Unit", "Until", "Use", "Using", "While", "Within", 
		"Zero", "AndEqual", "ArrowLeft", "ArrowRight", "Asterisk", "AsteriskEqual", 
		"At", "Bang", "BraceLeft", "BraceRight", "BracketLeft", "BracketRight", 
		"Caret", "CaretEqual", "Colon", "Comma", "DollarQuote", "Dot", "DoubleAmpersand", 
		"DoubleColon", "DoubleDot", "DoubleEqual", "DoublePipe", "DoubleQuote", 
		"Ellipsis", "Equal", "FatArrowRight", "Greater", "GreaterEqual", "Less", 
		"LessEqual", "Minus", "MinusEqual", "NotEqual", "OrEqual", "ParenLeft", 
		"ParenRight", "Percent", "PercentEqual", "Pipe", "Plus", "PlusEqual", 
		"Question", "Semicolon", "Slash", "SlashEqual", "TripleAmpersand", "TripleAmpersandEqual", 
		"TripleCaret", "TripleCaretEqual", "TripleGreater", "TripleGreaterEqual", 
		"TripleLess", "TripleLessEqual", "TriplePipe", "TriplePipeEqual", "TripleTilde", 
		"Underscore", "With", "WithEqual", "IntegerLiteral", "BigIntegerLiteral", 
		"DoubleLiteral", "Identifier", "IdentifierStart", "IdentifierContinuation", 
		"TypeParameter", "Whitespace", "Comment", "Invalid", "StringEscape", "StringText", 
		"StringDoubleQuote", "InterpStringEscape", "InterpBraceLeft", "InterpStringText", 
		"InterpDoubleQuote",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(QSharpParser._LITERAL_NAMES, QSharpParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return QSharpParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "QSharpParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return QSharpParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return QSharpParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(QSharpParser._ATN, this);
	}
	// @RuleVersion(0)
	public document(): DocumentContext {
		let _localctx: DocumentContext = new DocumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, QSharpParser.RULE_document);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 87;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === QSharpParser.Namespace) {
				{
				{
				this.state = 84;
				this.namespace();
				}
				}
				this.state = 89;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 90;
			this.match(QSharpParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public namespace(): NamespaceContext {
		let _localctx: NamespaceContext = new NamespaceContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, QSharpParser.RULE_namespace);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 92;
			this.match(QSharpParser.Namespace);
			this.state = 93;
			this.qualifiedName();
			this.state = 94;
			this.match(QSharpParser.BraceLeft);
			this.state = 98;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 24)) & ~0x1F) === 0 && ((1 << (_la - 24)) & ((1 << (QSharpParser.Function - 24)) | (1 << (QSharpParser.Internal - 24)) | (1 << (QSharpParser.Newtype - 24)) | (1 << (QSharpParser.Open - 24)) | (1 << (QSharpParser.Operation - 24)))) !== 0) || _la === QSharpParser.At) {
				{
				{
				this.state = 95;
				this.namespaceElement();
				}
				}
				this.state = 100;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 101;
			this.match(QSharpParser.BraceRight);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public qualifiedName(): QualifiedNameContext {
		let _localctx: QualifiedNameContext = new QualifiedNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, QSharpParser.RULE_qualifiedName);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 103;
			this.match(QSharpParser.Identifier);
			this.state = 108;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 104;
					this.match(QSharpParser.Dot);
					this.state = 105;
					this.match(QSharpParser.Identifier);
					}
					}
				}
				this.state = 110;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public namespaceElement(): NamespaceElementContext {
		let _localctx: NamespaceElementContext = new NamespaceElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, QSharpParser.RULE_namespaceElement);
		try {
			this.state = 114;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				_localctx = new OpenElementContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 111;
				this.openDirective();
				}
				break;

			case 2:
				_localctx = new TypeElementContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 112;
				this.typeDeclaration();
				}
				break;

			case 3:
				_localctx = new CallableElementContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 113;
				this.callableDeclaration();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public openDirective(): OpenDirectiveContext {
		let _localctx: OpenDirectiveContext = new OpenDirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, QSharpParser.RULE_openDirective);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			this.match(QSharpParser.Open);
			this.state = 117;
			_localctx._name = this.qualifiedName();
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === QSharpParser.As) {
				{
				this.state = 118;
				this.match(QSharpParser.As);
				this.state = 119;
				_localctx._alias = this.qualifiedName();
				}
			}

			this.state = 122;
			this.match(QSharpParser.Semicolon);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attribute(): AttributeContext {
		let _localctx: AttributeContext = new AttributeContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, QSharpParser.RULE_attribute);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 124;
			this.match(QSharpParser.At);
			this.state = 125;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public access(): AccessContext {
		let _localctx: AccessContext = new AccessContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, QSharpParser.RULE_access);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this.match(QSharpParser.Internal);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declarationPrefix(): DeclarationPrefixContext {
		let _localctx: DeclarationPrefixContext = new DeclarationPrefixContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, QSharpParser.RULE_declarationPrefix);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === QSharpParser.At) {
				{
				{
				this.state = 129;
				this.attribute();
				}
				}
				this.state = 134;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 136;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === QSharpParser.Internal) {
				{
				this.state = 135;
				this.access();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeDeclaration(): TypeDeclarationContext {
		let _localctx: TypeDeclarationContext = new TypeDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, QSharpParser.RULE_typeDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.declarationPrefix();
			this.state = 139;
			this.match(QSharpParser.Newtype);
			this.state = 140;
			this.match(QSharpParser.Identifier);
			this.state = 141;
			this.match(QSharpParser.Equal);
			this.state = 142;
			this.underlyingType();
			this.state = 143;
			this.match(QSharpParser.Semicolon);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public underlyingType(): UnderlyingTypeContext {
		let _localctx: UnderlyingTypeContext = new UnderlyingTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, QSharpParser.RULE_underlyingType);
		try {
			this.state = 147;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				_localctx = new TupleUnderlyingTypeContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 145;
				this.typeDeclarationTuple();
				}
				break;
